# markov_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: markov_rs.yml
assets/: long_text.txt  middle_text.txt  short_text.txt
benches/: benchmark.rs
examples/: basic.rs
src/: lib.rs
