[package]
name = "markov_rs"
version = "0.1.0"
authors = ["Ichi Hazuki <ichi.h3@gmail.com>"]
description = "A simple Markov chain generator in Rust."
documentation = ""
homepage = ""
repository = ""
keywords = ["markov", "chain", "probability", "generation"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
