[package]
name = "markov_rs"
version = "0.1.2"
authors = ["ichi-h <ichi.h3@gmail.com>"]
description = "A simple and fast Markov chain generator in Rust."
documentation = "https://docs.rs/markov_rs"
homepage = "https://github.com/ichi-h/markov_rs"
repository = "https://github.com/ichi-h/markov_rs"
keywords = ["markov", "chain", "probability", "generation"]
categories = ["algorithms"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version="1.0", features = ["derive"] }
weighted_rand = "0.3"

[dev-dependencies]
criterion = "0.3"
once_cell = "1.8.0"

[[bench]]
name = "benchmark"
harness = false
